packages/admin/src/pages/build-application/[applicationId]/components/Sections.module.scss
@import '~govuk-frontend/govuk/helpers/colour';

.sections-delete-section-btn-mrg-left {
    font-size: large;
    margin-left: 20px;
    line-height: 40px;
}

.sections-cta-margin-bottom {
    margin-bottom: -20px;
}

.caption {
    background-color: govuk-colour("light-grey");
}

.table {
    border: 1px solid govuk-colour("mid-grey");
}

